# robot

./: .clang-format  .dockerignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  Doxyfile  Makefile  README.md  flake.nix
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
include/: robot.hpp
src/: assets.hpp  component.hpp  component_types.hpp  components.hpp  mainloop.hpp  math.hpp  rest.hpp  robot.cpp  scene_packet.hpp  sparse_set.hpp  systems.hpp
tests/: approval_tests.cpp  catch_tests.cpp  component_tests.cpp  component_types_tests.cpp  components_tests.cpp  sparse_set_tests.cpp
